--- a/MyOutfitInventoryMVP/components/home/aboutTmpl.html
+++ b/MyOutfitInventoryMVP/components/home/aboutTmpl.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="about-description">
-      <p>MyOufit Inventory completely changes the way you shop online for clothing. Find items you like, add them to your inventory and save them to your wishlist. Scroll through your clothing loot and equip them to see how they look together. When you're ready to buy your new outfit, click the individual items to be taken to their product pages. MyOutfit Inventory is currently an MVP.</p>
+      <p>MyOufit Inventory will bring a new and fun way to shop for clothing online. Create your own toon to dress up - maybe of your favorite TV show or video game character or yourself! - and have them try on featured clothing products online (such as Amazon.com or Overstock.com). Add them to your inventory, and they'll be available for you to mix and match. Equip them to your toon, and you'll be able to see how different items look together. MyOutfit Inventory is currently an MVP.</p>
     </div>
 
     <div class="about-get-started-button">
