--- a/MyOutfitInventoryMVP/view/styles.css
+++ b/MyOutfitInventoryMVP/view/styles.css
@@ -17,6 +17,8 @@ html, body {
   background-color: #702297;
   display: flex;
   justify-content: space-between;
+  position: relative;
+  margin-top: 0;
 }
 
 .home-header img {
@@ -157,37 +159,109 @@ html, body {
   width: 100%;
   margin: 0;
   display:flex;
-  justify-content: space-around;;
+  justify-content: center;
 }
 
 .demo-inventory {
   height: 100%;
   width: 80%;
+  margin: 0;
+  display: flex;
+  justify-content: space-between;;
   background-color: rgba(112, 34, 150, 0.27);
   padding: 50px;
   border-radius: 30px;
 }
 
-.slider {
-  border: 2px solid black;
-  border-radius: 30px;
+.outfit-display {
   height: 100%;
-  width: 20%;
-  display: inline-block;
+  width: 60%;
+  border: 1px solid black;
+  background-color: white;
+  border-radius: 40px;
+}
+
+.left-side-categories {
+  height: 100%;
+  width: 30%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.right-side-categories {
+  height: 100%;
+  width: 30%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.slider {
+  border-radius: 40px;
+  margin-top: 20px;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  background-color: white;
+  align-items: center;
+}
+
+.arrows {
+  width: 40%;
+  max-width: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .arrows img {
-  width: 50px;
-  height: 50px;
-  background-color: darkgray;
+  width: 60%;
+  max-width: 50%;
+  height: 100%;
+  background-color: #702297;
 }
 
-.slider-shirts img {
-  width: 80px;
-  height: 80px;
+.slider-items {
+  width: 60%;
+  height: 100%;
 }
 
+.slider-items img {
+  width: 100%;
+  height: 100%;
+}
 
+.slider-pants {
+  width: 60%;
+  height: 100%;
+}
+
+.slider-pants img {
+  width: 100%;
+  height: 100%;
+}
+
+.slider-shoes {
+  width: 60%;
+  height: 100%;
+}
+
+.slider-shoes img {
+  width: 100%;
+  height: 100%;
+}
+
+.slider-headwear {
+  width: 60%;
+  height: 100%;
+}
+
+.slider-headwear img {
+  width: 100%;
+  height: 100%;
+}
 /****************************/
 
 /*SIGNUP*/
