ready to present

--- a/MyOutfitInventoryMVP/components/home/footerTmpl.html
+++ b/MyOutfitInventoryMVP/components/home/footerTmpl.html
@@ -1,3 +1,4 @@
 <footer class="home-footer">
-  <a ui-sref="contact">contact</a>
+  <p>© 2016 MyOutfit Inventory</p>
+  <p>Cloth graphic by <a href="http://linhpham.me/miu">Linh Pham</a> and Tool graphic by <a href="http://www.freepik.com/">Freepik</a> from <a href="http://www.flaticon.com/">Flaticon</a> are licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>. Made with <a href="http://logomakr.com" title="Logo Maker">Logo Maker</a></p>
 </footer>
