--- a/MyOutfitInventoryMVP/components/home/headerTmpl.html
+++ b/MyOutfitInventoryMVP/components/home/headerTmpl.html
@@ -1,6 +1,6 @@
 <header class="home-header">
   <div class="logo">
-    <a ui-sref="home"><img src="view/img/Logoheader.png">
+    <a ui-sref="home"><img src="http://s20.postimg.org/qtyhe5jh9/Logoheader.png">
   </div>
 
   <div class="header-nav">
