--- a/MyOutfitInventoryMVP/components/home/homeTmpl.html
+++ b/MyOutfitInventoryMVP/components/home/homeTmpl.html
@@ -3,7 +3,7 @@
 
 <section class="home-get-started">
   <div class="logo">
-    <img src="view/img/Logo.png">
+    <img src="http://s20.postimg.org/4w20kd4gt/Logo.png">
   </div>
 
 <div class="home-get-started-button">
