--- a/MyOutfitInventoryMVP/view/styles.css
+++ b/MyOutfitInventoryMVP/view/styles.css
@@ -167,7 +167,7 @@ html, body {
   width: 80%;
   margin: 0;
   display: flex;
-  justify-content: space-between;;
+  justify-content: space-between;
   background-color: rgba(112, 34, 150, 0.27);
   padding: 50px;
   border-radius: 30px;
@@ -176,7 +176,6 @@ html, body {
 .outfit-display {
   height: 100%;
   width: 60%;
-  border: 1px solid black;
   background-color: white;
   border-radius: 40px;
 }
@@ -220,12 +219,12 @@ html, body {
   width: 60%;
   max-width: 50%;
   height: 100%;
-  background-color: #702297;
+  background-color: white;
 }
 
 .slider-items {
-  width: 60%;
-  height: 100%;
+  width: 55%;
+  height: 80%;
 }
 
 .slider-items img {
@@ -295,12 +294,20 @@ html, body {
   background-color: #702297;
   display:flex;
   justify-content: space-around;
-  position:relative;
+  flex-direction: column;
   margin-bottom: 0;
+  text-align: center;
+}
+
+.home-footer p {
+    color: white;
+    font-size: 16px;
+    margin-top: 10px;
 }
 
 .home-footer a {
   font-size: 16px;
-  color: white;
+  color: #FF9800;
   margin-top: 10px;
+  text-decoration: none;
 }
